# youversion-suggest-data

./: .coveragerc  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
bible/: bible-arb.json  bible-bul.json  bible-deu.json  bible-ell.json  bible-eng.json  bible-fin.json  bible-fra.json  bible-grc.json  bible-hin.json  bible-ind.json  bible-ita.json  bible-jpn.json  bible-khm.json  bible-kor.json  bible-lat.json  bible-nld.json  bible-pes.json  bible-pol.json  bible-por.json  bible-por_pt.json  bible-ron.json  bible-rus.json  bible-spa.json  bible-spa_es.json  bible-swe.json  bible-swh.json  bible-tgl.json  bible-tur.json  bible-ukr.json  bible-vie.json  bible-zho.json  bible-zho_tw.json  book-metadata.json  language-arb.json  language-bul.json  language-deu.json  language-eng.json  language-fin.json  language-fra.json  language-hin.json  (+18 more)
data/: chapters.json
languages/: chapters.json
preferences/: defaults.json
schemas/: schema-bible.json  schema-book-metadata.json  schema-defaults.json  schema-language.json  schema-languages.json  schema-metadata.json
tests/: __init__.py  conftest.py  decorators.py  test_bibles.py  test_book_metadata.py  test_compliance.py  test_get_bible.py  test_get_bible_data.py  test_get_books.py  test_get_language_name.py  test_get_versions.py  test_main.py  test_save_bible.py  test_save_bible_data.py  test_update_language.py  test_update_language_list.py  test_update_languages.py
utilities/: __init__.py  add_language.py  book_parser.py  foo.py  language_parser.py  requester.py  update_language.py  update_languages.py  (+2 more)
(+5 files in other folders)
