[project]
name = "youversion-suggest-data"
version = "6.1.0"
description = "Bible language data gathered from the YouVersion website."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
license = "MIT"
dependencies = []

[dependency-groups]
dev = [
    "coverage==7.4.4",
    "httpx==0.27.0",
    "jsonschema==4.21.1",
    "nose2==0.14.1",
    "radon==6.0.1",
    "ruff>=0.12.0",
]

[tool.ruff]
include = ["**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # perflint
    "PERF",
]
